<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".mvp.addquestion.AddQuestionActivity">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="true"
        android:scrollbarFadeDuration="1"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/question_add_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/app_name"
                android:src="@drawable/question" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:counterTextAppearance="@style/InputTextLayoutCounterStyle"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/baseline_contact_support_black_24dp"
                    android:drawableTint="@color/colorPrimaryText"
                    android:hint="@string/tint_question_title"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textViewScanCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/tint_question_text"
                android:textAlignment="textEnd"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorSecondaryText"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/ic_assignment_black_24dp"
                    android:drawableTint="@color/colorPrimaryText"
                    android:hint="@string/tint_question_text"
                    android:lines="3"
                    android:maxLines="3"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondaryText" />

            </android.support.design.widget.TextInputLayout>

            <GridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:verticalSpacing="0dp"
                android:horizontalSpacing="0dp"
                android:stretchMode="columnWidth"
                android:numColumns="2"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/activity_add_question"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_done_white_24dp" />

</android.support.design.widget.CoordinatorLayout>